<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8acaed"
    tools:context=".ui.game.GameFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="91dp"
        android:layout_height="87dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/movie"
        android:src="@drawable/baseline_local_movies_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/did_you_love_my_app"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <RadioButton
            android:id="@+id/yes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_very_much" />

        <RadioButton
            android:id="@+id/yes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_but_i_won_t_be_back" />

        <RadioButton
            android:id="@+id/no1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_it_was_bad" />

        <RadioButton
            android:id="@+id/no2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_it_was_only_so_so" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>